iptables.rules
# Generated by iptables-save v1.6.0 on Tue Feb 26 17:01:22 2019
*filter
:INPUT ACCEPT [142694183:15974609535]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [165049502:18421995249]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j REJECT --reject-with icmp-port-unreachable
# FILTER TABLE ICMP BLOCK
-A INPUT -s 192.168.10.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec --limit-burst 100 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j REJECT --reject-with icmp-port-unreachable
# FILTER TABLE SSH BLOCK 
-A INPUT -p tcp -m tcp -m iprange --src-range 192.168.10.120-192.168.10.140 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.10.220 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
# FILTER TABLE HTTP BLOCK
-A INPUT -m iprange --src-range 192.168.10.200-192.168.10.220 -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.10.224 -p tcp -m tcp -m state --state NEW -j ACCEPT
# FILTER TABLE HTTPS BLOCK
-A INPUT -m iprange --src-range 192.168.10.120-192.168.10.140 -p tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.10.72 -p tcp -m tcp -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.10.224 -p tcp -m tcp -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.10.226 -p tcp -m tcp -m state --state NEW -j ACCEPT
# FILTER TABLE Zabbix-ports BLOCK
-A INPUT -p tcp --dport 10050 -m state --state NEW -j ACCEPT
-A INPUT -p tcp --dport 10051 -m state --state NEW -j ACCEPT
# NAT
-A POSTROUTING -s 192.168.10.0/24 -o ens224 -j MASQUERADE
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -j ACCEPT
# FILTER TABLE REJECT BLOCK
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
#
# FILTER TABLE Fail2ban BLOCK
:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A f2b-sshd -j RETURN
COMMIT
# Completed on Tue Feb 26 17:01:22 2019
